# satellite-video-generation

./: README.md  pyproject.toml
examples/: project.sample.json
geovideo/: __init__.py  audio.py  camera.py  cli.py  compositor.py  config.py  draw.py  geo.py  schemas.py  timeline.py
geovideo/providers/: base.py  mapbox.py  osm.py
tests/: test_geo.py  test_timeline.py
