[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "geovideo"
version = "0.1.0"
description = "Tools for building geospatial video projects."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GeoVideo Contributors"}]
keywords = ["geospatial", "video", "mapping"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "moviepy>=1.0",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "pydantic>=2.5",
  "typer>=0.9",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
geovideo = "geovideo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["geovideo"]
